--- a/.github/workflows/sync-image-example.yml
+++ b/.github/workflows/sync-image-example.yml
@@ -20,14 +20,14 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2.2.0
       with:
-        registry: registry.cn-guangzhou.aliyuncs.com
+        registry: crpi-p4uvabvsouo615nw.cn-qingdao.personal.cr.aliyuncs.com
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
         logout: false
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
-         skopeo copy docker://docker.io/userxy2015/ngnix:latest docker://registry.cn-guangzhou.aliyuncs.com/gorgor1065/ngnix:latest
+         skopeo copy docker://docker.io/rixapi/rixapi:latest docker://crpi-p4uvabvsouo615nw.cn-qingdao.personal.cr.aliyuncs.com/sijin_docker/rixapi:latest
          
          
          
