--- a/.github/workflows/sync-image-example.yml
+++ b/.github/workflows/sync-image-example.yml
@@ -1,5 +1,6 @@
 name: Sync Image to Aliyun  Example
 #0.1.4
+#1.22.6
 on:
   push:
     branches: [ "main" ]
@@ -27,7 +28,7 @@ jobs:
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
-         skopeo copy docker://docker.io/voapi/voapi:latest docker://crpi-p4uvabvsouo615nw.cn-qingdao.personal.cr.aliyuncs.com/sijin_docker/voapi:latest
+         skopeo copy docker://docker.io/lobehub/lobe-chat:latest docker://crpi-p4uvabvsouo615nw.cn-qingdao.personal.cr.aliyuncs.com/sijin_docker/lobe-chat:latest
          
          
          
