--- a/.github/workflows/sync-image-example.yml
+++ b/.github/workflows/sync-image-example.yml
@@ -26,9 +26,17 @@ jobs:
         password: ${{secrets.DOCKER_PASSWORD}}
         logout: false
 #lobehub/lobe-chat
-    - name: Use Skopeo Tools Sync Image to Docker Hub
+    - name: Use Skopeo Tools Sync Image to Docker Hub 1
       run: |
          skopeo copy docker://docker.io/lobehub/lobe-chat:latest docker://crpi-p4uvabvsouo615nw.cn-qingdao.personal.cr.aliyuncs.com/sijin_docker/lobe-chat:latest
+#voapi/voapi
+    - name: Use Skopeo Tools Sync Image to Docker Hub 2
+      run: |
+         skopeo copy docker://docker.io/voapi/voapi:latest docker://crpi-p4uvabvsouo615nw.cn-qingdao.personal.cr.aliyuncs.com/sijin_docker/voapi:latest 
          
-         
+ #blinkospace/blinko
+    - name: Use Skopeo Tools Sync Image to Docker Hub 3
+      run: |
+         skopeo copy docker://docker.io/blinkospace/blinko:latest docker://crpi-p4uvabvsouo615nw.cn-qingdao.personal.cr.aliyuncs.com/sijin_docker/blinko:latest 
+                 
          
